Fix Bug 300869 - Addressbook messaging entries doesn't follow the RFC

Need kdepim too.

FIXED-IN: 4.9.1
BUG: 300869