kabc/vcardconverter.h
@@ -95,6 +95,15 @@ class KABC_EXPORT VCardConverter
     // FIXME: Add "createVCards( AddressBook * )"
 
     /**
+     * @since 4.9.1
+     */
+    QByteArray exportVCard( const Addressee &addr, Version version ) const;
+    /**
+     * @since 4.9.1
+     */
+    QByteArray exportVCards( const Addressee::List& list, Version version ) const;
+
+    /**
       Parses a string in vCard format and returns the first contact.
      */
     Addressee parseVCard( const QByteArray &vcard ) const;
